# ServerFramework

./: CMakeLists.txt  ProjectTool.sh  README.md
101_ZoneServer/src/: CMakeLists.txt
101_ZoneServer/src/Kernel/Allocator/: ZoneObjectAllocator.cpp  ZoneObjectAllocator.hpp  ZoneObjectHelper.hpp
101_ZoneServer/src/Kernel/App/: AppDef.hpp  AppLauncher.cpp  AppLoop.cpp  AppLoop.hpp
101_ZoneServer/src/Kernel/BillLog/: ZoneOssLog.cpp  ZoneOssLog.hpp
101_ZoneServer/src/Kernel/Config/: ConfigManager.cpp  ConfigManager.hpp  QMGMPrivConfigManager.cpp  QMGMPrivConfigManager.hpp
101_ZoneServer/src/Kernel/Database/: FetchRoleWorldHandler.cpp  FetchRoleWorldHandler.hpp  UpdateRoleInfoHandler.cpp  UpdateRoleInfoHandler.hpp
101_ZoneServer/src/Kernel/Event/: UnitEventManager.cpp  UnitEventManager.hpp
101_ZoneServer/src/Kernel/Handler/: Handler.cpp  Handler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  HandlerHelper.cpp  HandlerHelper.hpp  HandlerList.cpp  HandlerList.hpp
101_ZoneServer/src/Kernel/Protocol/: GameMsgTransceiver.cpp  GameMsgTransceiver.hpp  GameProtocolEngine.cpp  GameProtocolEngine.hpp
101_ZoneServer/src/Kernel/Session/: GameSession.cpp  GameSession.hpp  SessionDefine.hpp  SessionManager.cpp  SessionManager.hpp
101_ZoneServer/src/Kernel/Tick/: AppTick.cpp  AppTick.hpp  OnlineStatTick.cpp  OnlineStatTick.hpp
101_ZoneServer/src/Kernel/Units/: GameObjCommDef.hpp  GameUnitID.cpp  GameUnitID.hpp  UnitUtility.cpp  UnitUtility.hpp
101_ZoneServer/src/Modules/Chat/: ChatHandler.cpp  ChatHandler.hpp  ChatUtility.cpp  ChatUtility.hpp
101_ZoneServer/src/Modules/Combat/: AStarPathUtility.cpp  AStarPathUtility.hpp  BattlefieldObj.cpp  BattlefieldObj.hpp  CombatEventListener.cpp  CombatEventListener.hpp  CombatEventManager.cpp  CombatEventManager.hpp  CombatFramework.cpp  CombatFramework.hpp  CombatHandler.cpp  CombatHandler.hpp  CombatReward.cpp  CombatReward.hpp  CombatSkill.cpp  CombatSkill.hpp  CombatTrapObj.cpp  CombatTrapObj.hpp  CombatUnitAI.cpp  CombatUnitAI.hpp  CombatUnitObj.cpp  CombatUnitObj.hpp  CombatUtility.cpp  CombatUtility.hpp  UnitBufferManager.cpp  UnitBufferManager.hpp  UnitBufferObj.cpp  UnitBufferObj.hpp
101_ZoneServer/src/Modules/FightUnit/: FightUnitHandler.cpp  FightUnitHandler.hpp  FightUnitManager.cpp  FightUnitManager.hpp  FightUnitObj.cpp  FightUnitObj.hpp  FightUnitUtility.cpp  FightUnitUtility.hpp
101_ZoneServer/src/Modules/GM/: GMBaseCommand.cpp  GMBaseCommand.hpp  GMCommandHandler.cpp  GMCommandHandler.hpp  GMCommandManager.cpp  GMCommandManager.hpp
101_ZoneServer/src/Modules/Login/: KickRoleWorldHandler.cpp  KickRoleWorldHandler.hpp  LoginHandler.cpp  LoginHandler.hpp  LogoutHandler.cpp  LogoutHandler.hpp
101_ZoneServer/src/Modules/Reposity/: RepThingsFramework.cpp  RepThingsFramework.hpp  RepThingsHandler.cpp  RepThingsHandler.hpp  RepThingsManager.cpp  RepThingsManager.hpp  RepThingsUtility.cpp  RepThingsUtility.hpp
101_ZoneServer/src/Modules/Utility/: DropRewardUtility.cpp  DropRewardUtility.hpp
101_ZoneServer/src/Utils/: Base64URL.cpp  Base64URL.hpp  ConstantDef.hpp  MathHelper.cpp  MathHelper.hpp  MemCheck.cpp  MemCheck.hpp  ModuleHelper.cpp  ModuleHelper.hpp  ModuleShortcut.cpp  ModuleShortcut.hpp  RttUtility.cpp  RttUtility.hpp  ZoneErrorNumDef.hpp
102_ConfigEngine/: BattlefieldPathConfigManager.cpp  BattlefieldPathConfigManager.hpp  CMakeLists.txt  ConfigHelper.cpp  ConfigHelper.hpp  GameConfigDefine.hpp  ScenePathManager.cpp  ScenePathManager.hpp  ServerBusConfigManager.cpp  ServerBusConfigManager.hpp  TemplateConfigManager.hpp
108_WorldServer/src/: AppDefW.hpp  AppLoopW.cpp  AppLoopW.hpp  AppTick.cpp  AppTick.hpp  CMakeLists.txt  ChatHandler.cpp  ChatHandler.hpp  ConfigManager.cpp  ConfigManager.hpp  CreateRoleAccountHandler.cpp  CreateRoleAccountHandler.hpp  DeleteRoleAccountHandler.cpp  DeleteRoleAccountHandler.hpp  FetchRoleWorldHandler.cpp  FetchRoleWorldHandler.hpp  GameMasterHandler.cpp  GameMasterHandler.hpp  Handler.cpp  Handler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  KickRoleWorldHandler.cpp  KickRoleWorldHandler.hpp  ListRoleAccountHandler.cpp  ListRoleAccountHandler.hpp  ListZoneHandler.cpp  ListZoneHandler.hpp  LogoutHandler.cpp  LogoutHandler.hpp  MainApp.cpp  ModuleHelper.cpp  ModuleHelper.hpp  OnlineStatHandler.cpp  OnlineStatHandler.hpp  UnitTick.cpp  UnitTick.hpp  UpdateRoleWorldHandler.cpp  UpdateRoleWorldHandler.hpp  WorldBillLog.cpp  (+21 more)
113_RegAuthServer/src/: AccountDBAddHandler.cpp  AccountDBAddHandler.hpp  AccountDBFetchHandler.cpp  AccountDBFetchHandler.hpp  AccountUinObj.cpp  AccountUinObj.hpp  App.hpp  AppDef.hpp  AppLauncher.cpp  AuthAccountHandler.cpp  AuthAccountHandler.hpp  CMakeLists.txt  CSProtocolEngine.cpp  CSProtocolEngine.hpp  CacheTime.cpp  CacheTime.hpp  ClientClosedHandler.cpp  ClientClosedHandler.hpp  ConfigMgr.cpp  ConfigMgr.hpp  FixedHashCache.hpp  Handler.cpp  Handler.hpp  HandlerSet.cpp  HandlerSet.hpp  LRUHashCache.hpp  Public.hpp  RegAuthApp.cpp  RegAuthApp.hpp  RegAuthBillLog.cpp  RegAuthBillLog.hpp  RegAuthErrorNumDef.hpp  RegAuthHandlerSet.cpp  RegAuthHandlerSet.hpp  RegAuthMsgTransceiver.cpp  RegAuthMsgTransceiver.hpp  RegAuthObjectAllocator.cpp  RegAuthObjectAllocator.hpp  RegAuthPublic.hpp  RegAuthSingleton.hpp  (+12 more)
114_AccountDBServer/src/: AccountDBApp.cpp  AccountDBApp.hpp  AccountDBErrorNumDef.hpp  AccountDBHandlerSet.cpp  AccountDBHandlerSet.hpp  AccountDBInfoConfig.cpp  AccountDBInfoConfig.hpp  AccountDBLogManager.cpp  AccountDBLogManager.hpp  AccountDBMsgTransceiver.cpp  AccountDBMsgTransceiver.hpp  AccountDBPublic.hpp  AccountDBThread.cpp  AccountDBThread.hpp  AccountDBThreadManager.cpp  AccountDBThreadManager.hpp  AddAccountHandler.cpp  AddAccountHandler.hpp  AppDef.hpp  AppLauncher.cpp  AuthAccountHandler.cpp  AuthAccountHandler.hpp  CMakeLists.txt  DeleteAccountHandler.cpp  DeleteAccountHandler.hpp  FetchAccountHandler.cpp  FetchAccountHandler.hpp  Handler.cpp  Handler.hpp  HandlerSet.cpp  Public.hpp  RegisterAccountHandler.cpp  RegisterAccountHandler.hpp  SSProtocolEngine.cpp  SSProtocolEngine.hpp  UpdateAccountHandler.cpp  UpdateAccountHandler.hpp
(+318 files in other folders)
